# goals.danielmoessner.de

./: .gitignore  apache.conf  css.sh  deploy.sh  install-tailwind.sh  outdated.sh  package-lock.json  pyproject.toml  setup.sh  update.sh
apps/: actions.py
apps/achievements/: forms.py
apps/achievements/templates/achievements/: nav.html
apps/goals/: forms.py  models.py
apps/goals/templates/goals/: nav.html
apps/notes/: forms.py
apps/notes/templates/notes/: notes.html
apps/story/: forms.py
apps/story/templates/story/: nav.html
apps/todos/: forms.py  models.py  urls.py  utils.py  views.py
apps/todos/management/commands/: sendbotupdates.py  testbot.py
apps/todos/migrations/: 0010_remove_todo_notes_notestodo.py  0011_notestodo_position.py  0012_remove_repetitivetodo_repetitions.py  0013_alter_notestodo_notes.py  0014_alter_pipelinetodo_previous_alter_todo_user_page_and_more.py  0015_page_telegram_chat_id_page_telegram_user_tag.py  0016_alter_page_telegram_chat_id_and_more.py  0017_page_messages.py
apps/todos/templates/: create_nav.html  shared.html  todos.html
apps/todos/templates/symbols/: create_todo_fast.html  todos.html
apps/uploads/: admin.py  forms.py  models.py  urls.py  views.py
apps/uploads/migrations/: 0001_initial.py
apps/uploads/templates/: uploads.html
apps/users/: forms.py
config/: bot.py  errors.py  form.py  form_addons.py  form_class.py  mixins.py  urls.py
config/settings/: base.py
static/src/: main.css
templates/: form.html  nav.html  nav.txt
templates/btn/: secondary_submit.html  submit.html
(+9 files in other folders)
